feat: implementa padrão Saga distribuído para orquestração de conclusão de consultas entre os módulos appointment, pharmacy e billing